src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Partner_1_Global_Alliance_Manager__c</fullName>
        <formula>Partner_1_Account__r.Global_Alliance_Manager__r.FirstName  &amp;&quot; &quot;&amp;  Partner_1_Account__r.Global_Alliance_Manager__r.LastName</formula>
        <label>Partner 1- Global Alliance Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_1_Role__c</fullName>
        <label>Partner 1- Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sourcer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SaaS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_2_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner 2 Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Partner 2 Account)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_2_Alliance_Manager__c</fullName>
        <formula>Partner_2_Account__r.Regional_Alliance_Manager__r.FirstName &amp;&quot; &quot;&amp; Partner_2_Account__r.Regional_Alliance_Manager__r.LastName</formula>
        <label>Partner 2- Alliance Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Role__c</fullName>
        <label>Partner 2- Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sourcer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_3_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner 3 Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Partner 3 Account)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_3_Alliance_Manager__c</fullName>
        <formula>Partner_3_Account__r.Regional_Alliance_Manager__r.FirstName &amp;&quot; &quot;&amp; Partner_3_Account__r.Regional_Alliance_Manager__r.LastName</formula>
        <label>Partner 3- Alliance Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_3_Role__c</fullName>
        <label>Partner 3- Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sourcer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Alliance_Manager__c</fullName>
        <formula>Partner_1_Account__r.Regional_Alliance_Manager__r.FirstName &amp;&quot; &quot;&amp; Partner_1_Account__r.Regional_Alliance_Manager__r.LastName</formula>
        <label>Partner 1- Regional Alliance Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Comments__c</fullName>
        <inlineHelpText>Engagement model with partner (co-sell, re-sell, partner prime, Guidewire prime, etc.) and any other comments. Specify partners below.</inlineHelpText>
        <label>Partner Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <label>Partner Role</label>
        <picklist>
            <picklistValues>
                <fullName>Request Assistance (Selling Mitchell Products)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Assistance (Selling Guidewire Products)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partners_Involved__c</fullName>
        <label>Partners Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Cycle__c</fullName>
        <label>Payment Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perpetual_License_Amount__c</fullName>
        <label>Perpetual - License Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PolicyCenter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PolicyCenter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_In_Scope__c</fullName>
        <inlineHelpText>This should be the deal premium in scope or the incremental DWP Adjustment. Used in conjunction with Price Rules to calculate the price for certain Products.</inlineHelpText>
        <label>Premium In Scope</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add on- select below</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Profitability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Model Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Scoring Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Progress_Blocker__c</fullName>
        <description>Issues or items preventing opportunity progressing from current stage.</description>
        <inlineHelpText>Issues or items preventing opportunity progressing from current stage.</inlineHelpText>
        <label>Stage Progress Blocker</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <inlineHelpText>Enter Small (1-2 consultants, 6-10 months), Medium (3-4, 10-15), or Large (5+, 15+); or enter additional details if known.</inlineHelpText>
        <label>Project Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <inlineHelpText>Only necessary for unusual start dates; if the project will start about 90 days after signing, you can leave this blank.</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospect_Plan_Update_Time__c</fullName>
        <description>set through Attachment Trigger</description>
        <inlineHelpText>Date/Time the prospect plan file was last uploaded</inlineHelpText>
        <label>Prospect Plan Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Public_ARR__c</fullName>
        <description>The ARR that can be viewed by everyone after an earnings call.</description>
        <label>Public ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_Internal_Project_Name_t__c</fullName>
        <inlineHelpText>Enter the internal name of the project, if there is one.  Leave blank if there is not.</inlineHelpText>
        <label>Q1 Internal project name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <formula>if(LEN(Q1_Internal_Project_Name_t__c)&gt;0 ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Preliminary_business_case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has a preliminary business case been created?</inlineHelpText>
        <label>Q2 Preliminary business case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <formula>if( Q2_Preliminary_business_case__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Project_manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there a specific project manager for the project?</inlineHelpText>
        <label>Q3 Project manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <formula>if( Q3_Project_manager__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4_Explicitly_stated_project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has Director/Sr. Manager level (or higher) explicitly said they will be doing a project?</inlineHelpText>
        <label>Q4 Explicitly stated project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quota_ARR__c</fullName>
        <description>Provides USD value of NARR field based on start of Financial Year.</description>
        <inlineHelpText>Provides USD value of NARR field based on start of Financial Year.</inlineHelpText>
        <label>Quota ARR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_DWP_In_Scope_Currency__c</fullName>
        <description>For information purposes only from primary quote</description>
        <label>Quote DWP In-Scope Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_DWP_In_Scope_Input__c</fullName>
        <description>Populated for informational purposes from the primary quote record</description>
        <label>Quote DWP In-Scope Input</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_In_Scope_DWP_Input_Type__c</fullName>
        <description>For informational purposes only from primary quote</description>
        <label>Quote In-Scope DWP Input Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_In_Scope_DWP_Input_nmbr__c</fullName>
        <label>Quote In-Scope DWP Input nmbr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RF1_Opportunity_stalled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the opportunity stalled?  (No progress made recently, with no clear indication that progress will resume)</inlineHelpText>
        <label>RF1 Opportunity stalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RF2_Important_person_left__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has anyone important to the process left their role recently?</inlineHelpText>
        <label>RF2 Important person left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RF3_Serious_financial_crisis__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the prospect experiencing a serious financial crisis?</inlineHelpText>
        <label>RF3 Serious financial crisis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RF4_Policy_first__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is a claims or billing opportunity, is there a chance it will be shelved in favor of a policy project?</inlineHelpText>
        <label>RF4 Policy first</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RF5_Other_red_flag__c</fullName>
        <inlineHelpText>Specify any other significant red flag</inlineHelpText>
        <label>RF5 Other red flag</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Approval_SC__c</fullName>
        <label>RFI Approval - SC</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFI_Approval_SD__c</fullName>
        <label>RFI Approval - SD</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFI_Approved_Denied_SC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFI Approved/Denied by SC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunitiesuzvy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFI_Approved_Denied_SD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFI Approved/Denied by SD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesuzwD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFI_EOI_Due__c</fullName>
        <label>RFI/EOI Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFI_EOI_Received__c</fullName>
        <label>RFI/EOI Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Approval_SC__c</fullName>
        <label>RFP Approval - SC</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Approval_SD__c</fullName>
        <label>RFP Approval - SD</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Approved_Denied_SC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Approved/Denied by SC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesuzwS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Approved_Denied_SD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Approved/Denied by SD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunitiesuzwc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Tender_Due__c</fullName>
        <label>RFP/Tender Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Tender_Received__c</fullName>
        <label>RFP/Tender Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <label>Reason for Termination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Loss__c</fullName>
        <label>Reasons for Loss</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Win__c</fullName>
        <label>Reasons for Win</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Status__c</fullName>
        <description>What is the current status of the red flag?</description>
        <inlineHelpText>What is the current status of the red flag? Describe the roadblocks.</inlineHelpText>
        <label>Red Flag Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose the customer for the first scheduled reference call or visit.</inlineHelpText>
        <label>Reference 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>References Hosted</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose the customer for the second scheduled reference call or visit.</inlineHelpText>
        <label>Reference 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>References Hosted</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>References Hosted</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Sales_Executive__c</fullName>
        <label>Region Sales Executive</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relevant_Stories__c</fullName>
        <description>Relevent success stories</description>
        <inlineHelpText>Relevent success stories to share, potential active references to use. This is where  the functional sales consultant and implementation services can jointly determine what stories we should discuss.</inlineHelpText>
        <label>Relevant Stories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Removal_Confirmation_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removal Confirmation Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Result_Date__c</fullName>
        <description>Capture the date when the opportunity stage changes.</description>
        <label>Report_Result Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Data_Management_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Data Management Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Insurance_Suite_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Request approval to sell InsuranceSuite including Mitchell in the Opportunity&apos;s region.</inlineHelpText>
        <label>Request InsuranceSuite Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Live_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Live Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Mobile_Portals_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Mobile &amp; Portals Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Standards_based_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Request approval for Standards Based Templates</inlineHelpText>
        <label>Standards Based Templates Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Date_DM__c</fullName>
        <label>Requested Date (DM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Date_InsuranceSuite__c</fullName>
        <label>Requested Date (InsuranceSuite)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Date_Live__c</fullName>
        <label>Requested Date (Live)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Date_MP__c</fullName>
        <label>Requested Date (M&amp;P)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Date_SBP__c</fullName>
        <label>Requested Date (SBT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>S1_Selected_by_CIO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do we have first hand advice from the CIO (head of technology) that we have been selected? Blocks progression to Final Approvals.</inlineHelpText>
        <label>S1 Selected by CIO*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S1__c</fullName>
        <formula>if ( S1_Selected_by_CIO__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S2_Selected_by_business_head__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do we have first-hand advice from the relevant business head that we have been selected?</inlineHelpText>
        <label>S2 Selected by business head</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S2__c</fullName>
        <formula>if( S2_Selected_by_business_head__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S3_Detailed_business_case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has a detailed business case been created specifically for a Guidewire solution?</inlineHelpText>
        <label>S3 Detailed business case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S3__c</fullName>
        <formula>if ( S3_Detailed_business_case__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S4_Internal_development_eliminated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do we have first-hand advice from the CIO that internal development has been eliminated as an option? Blocks progression to Final Approvals.</inlineHelpText>
        <label>S4 Internal dev eliminated*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_Backup__c</fullName>
        <label>SC Backup</label>
        <picklist>
            <picklistValues>
                <fullName>Alistair Rivans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben Brantley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleen Scott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corbett Klempay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniele Aylward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eileen Maier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Kwak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenna Olson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Drabik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Eischens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Sigman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Paulenko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Burn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicholas Frank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Fioravanti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phil Smyth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sigrid Georgescu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wendell Mead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yiannis Tzioumis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SC_Lead1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SC Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesTu1e</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>